agregado dos imagenes al body

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
 <body>
   <img src = "imagenes/003.jpg"/>
   <img src = "imagenes/005.jpg"/>
+  <img src = "imagenes/001.jpg"/>
+  <img src = "imagenes/002.jpg"/>
+
 </body>
 </html>
