nueva versión de Invie-verde

--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
   </style>
 </head>
 <body>
-  <img src = "imagenes/003.jpg"/>
-  <img src = "imagenes/005.jpg"/>
-  <img src = "imagenes/001.jpg"/>
-  <img src = "imagenes/002.jpg"/>
-
+  <img src = "imagenes/nuevaimagen2.jpg"/>
 </body>
 </html>
